# ASDfR-3

./: README.md  commands  pid_config.csv  start_script.sh  videoserver.py
.env/: pyvenv.cfg
asdfr-01@10.0.28.123/asdfr_msgs/: CMakeLists.txt  package.xml
asdfr-01@10.0.28.123/rebot_simulator/include/: relbot_simulator.hpp
asdfr-01@10.0.28.123/src/asdfr_msgs/msg/: IdentifiedObject.msg
asdfr-01@10.0.28.123/src/cam2image_vm2ros/config/: cam2image.yaml
asdfr-01@10.0.28.123/src/colour_segmenter/include/: colour_segmenter.hpp
asdfr-01@10.0.28.123/src/object_identifier/: README.md
asdfr-01@10.0.28.123/src/rebot_simulator/: README.md
asdfr-01@10.0.28.123/src/rebot_simulator/include/: relbot_simulator.hpp
asdfr-01@10.0.28.123/src/test_node/config/: test_node.yml
asdfr-01@10.0.28.123/test_node/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.sh
install/asdfr_msgs/include/asdfr_msgs/asdfr_msgs/msg/: identified_object.h  identified_object.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/asdfr_msgs/include/asdfr_msgs/asdfr_msgs/msg/detail/: identified_object__builder.hpp  identified_object__functions.c  identified_object__rosidl_typesupport_fastrtps_c.h  identified_object__rosidl_typesupport_fastrtps_cpp.hpp  identified_object__struct.h  identified_object__struct.hpp  identified_object__traits.hpp  (+2 more)
install/asdfr_msgs/share/ament_index/resource_index/rosidl_interfaces/: asdfr_msgs
install/asdfr_msgs/share/asdfr_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/asdfr_msgs/share/asdfr_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  asdfr_msgsConfig.cmake  asdfr_msgs__rosidl_typesupport_cppExport-noconfig.cmake  asdfr_msgs__rosidl_typesupport_cppExport.cmake  export_asdfr_msgs__rosidl_generator_cExport.cmake  export_asdfr_msgs__rosidl_generator_pyExport-noconfig.cmake  export_asdfr_msgs__rosidl_generator_pyExport.cmake  export_asdfr_msgs__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/cam2image_vm2ros/lib/cam2image_vm2ros/: cam2image
install/cam2image_vm2ros/share/cam2image_vm2ros/: local_setup.sh  package.sh
install/colour_segmenter/lib/colour_segmenter/: colour_segment
install/colour_segmenter/share/ament_index/resource_index/rclcpp_components/: colour_segmenter
install/colour_segmenter/share/colour_segmenter/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/colour_segmenter/share/colour_segmenter/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake
install/object_identifier/include/object_identifier/: object_identifier.hpp
install/object_identifier/lib/object_identifier/: object_identifier_node
install/object_identifier/share/ament_index/resource_index/package_run_dependencies/: object_identifier
install/object_identifier/share/object_identifier/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/object_identifier/share/object_identifier/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  object_identifierExport.cmake
install/relbot_simulator/share/relbot_simulator/: local_setup.sh  package.sh
install/test_node/lib/test_node/: test_node_exec
install/test_node/share/ament_index/resource_index/parent_prefix_path/: test_node
install/test_node/share/test_node/: package.dsv  package.ps1  package.sh
install/test_node/share/test_node/cmake/: ament_cmake_export_targets-extras.cmake  test_nodeConfig.cmake  test_nodeExport-noconfig.cmake
log/: latest_build
src/XRF2/XenoRosFramework/Common/XRF2_msgs/msg/: Ros2Xeno.msg
src/XRF2/XenoRosFramework/Ros/ros_xeno_bridge/src/: RosXenoBridge.cpp
src/XRF2/XenoRosFramework/Xenomai/src/: XenoFileHandler.cpp  XenoFrtRosIco.cpp  XenoRosCommandBridge.cpp
src/XenoRosFramework/Ros/ros_xeno_bridge/include/: RosXenoBridge.hpp
src/XenoRosFramework/Xenomai/include/: XenoFileHandler.hpp  XenoFrtRosIco.hpp  XenoRosCommandBridge.hpp  XenoRosDataBridge.hpp
src/XenoRosFramework/Xenomai/src/: XenoRosDataBridge.cpp
src/asdfr_msgs/: README.md  package.xml
src/cam2image_vm2ros/: README.md
src/cam2image_vm2ros/config/: cam2image_relbot.yaml
src/colour_segmenter/: CMakeLists.txt  README.md
src/colour_segmenter/config/: colour_segmenter.yml
src/colour_segmenter/src/: colour_segmenter.cpp
src/object_follower/: CMakeLists.txt  README.md  package.xml
src/object_follower/config/: object_follower.yml
src/object_follower/include/: object_follower.hpp
src/object_follower/src/: object_follower.cpp
src/object_identifier/: CMakeLists.txt  README.md
src/object_identifier/config/: object_identifier.yml
src/object_identifier/include/: object_identifier.hpp
src/object_identifier/src/: object_identifier.cpp
src/relbot_rt/: CMakeLists.txt  README.md  main.cpp
src/relbot_rt/controller/: LoopController.cpp  LoopController.h  LoopController_tokens.xml  config_loader.cpp  pid_config.hpp  test_LoopController.cpp_archive
src/relbot_rt/controller/common/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
src/relbot_rt/include/: RelbotRT.hpp  SoftEncoder.hpp
src/relbot_rt/src/: RelbotRT.cpp
src/state_manger/: CMakeLists.txt  README.md  package.xml
src/state_manger/include/: state_manger.hpp
src/state_manger/src/: state_manger.cpp
src/test_node/: CMakeLists.txt  README.md
src/test_node/config/: test_node.yml
src/test_node/include/: test_node.hpp
src/test_node/src/: test_node.cpp
templates/realtime/: README.md
templates/realtime/Template/Template-20sim/: CMakeLists.txt
templates/realtime/Template/Template-20sim/src/: Template20Sim.cpp
templates/realtime/Template/Template-Base/src/: Template.cpp
testing_scripts/: encoder_test.py  requirements.txt
