<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asdfr_msgs</name>
  <version>0.0.0</version>
  <description>This package only contains messages</description>
  <maintainer email="nicholas.ehsan.roy@gmail.com">nick</maintainer>
  <license>Apache-2.0</license> <!-- Fix license format (remove space after "Apache") -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Remove redundant <build_depend>rosidl_default_generators</build_depend> -->
  <!-- Remove test dependencies (optional for message-only packages) -->
  
  <!-- Add runtime dependencies -->
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
