<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_follower</name>
  <version>0.0.0</version>
  <description>The node in this package is intended to locate a green object published to the bw_image topic (expected to be filtered and thresholded)</description>
  <maintainer email="nicholas.ehsan.roy@gmail.com">nick</maintainer>
  <license>Apache 2.0.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <build_depend>libopencv-dev</build_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>rclcpp_components</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>libopencv-dev</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>rclcpp_components</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend> 

  </export>
</package>
